Modernize tycho-versions-plugin tests