@@ -1,15 +1,13 @@
 package org.eclipse.tycho.versions.bundle.tests;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.eclipse.tycho.model.manifest.MutableManifestElement;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.osgi.framework.BundleException;
 import org.osgi.framework.Constants;
 
@@ -35,8 +33,8 @@ public class MutableManifestElementTest {
     @Test
     public void testGetAttribute() {
         MutableManifestElement requireBundle = new MutableManifestElement("bundle1",
-                Collections.singletonMap(Constants.BUNDLE_VERSION_ATTRIBUTE, "1.0.0"),
-                Collections.singletonMap(Constants.VISIBILITY_DIRECTIVE, Constants.VISIBILITY_REEXPORT));
+                Map.of(Constants.BUNDLE_VERSION_ATTRIBUTE, "1.0.0"),
+                Map.of(Constants.VISIBILITY_DIRECTIVE, Constants.VISIBILITY_REEXPORT));
 
         assertEquals("1.0.0", requireBundle.getAttribute(Constants.BUNDLE_VERSION_ATTRIBUTE));
 
@@ -46,7 +44,7 @@ public class MutableManifestElementTest {
     @Test
     public void testSetAttribute() {
         MutableManifestElement requireBundle = new MutableManifestElement("bundle1",
-                Collections.singletonMap(Constants.BUNDLE_VERSION_ATTRIBUTE, "1.0.0"), Collections.emptyMap());
+                Map.of(Constants.BUNDLE_VERSION_ATTRIBUTE, "1.0.0"), Map.of());
 
         requireBundle.setAttribute(Constants.BUNDLE_VERSION_ATTRIBUTE, "2.0.0");
 
@@ -55,8 +53,7 @@ public class MutableManifestElementTest {
 
     @Test
     public void testWriteValueOnly() {
-        MutableManifestElement bundleVersion = new MutableManifestElement("2.0.0.qualifier", Collections.emptyMap(),
-                Collections.emptyMap());
+        MutableManifestElement bundleVersion = new MutableManifestElement("2.0.0.qualifier", Map.of(), Map.of());
 
         assertEquals("2.0.0.qualifier", bundleVersion.write());
     }
@@ -64,8 +61,8 @@ public class MutableManifestElementTest {
     @Test
     public void testWriteAttirbuteAndDirective() {
         MutableManifestElement requireBundle = new MutableManifestElement("bundle1",
-                Collections.singletonMap(Constants.BUNDLE_VERSION_ATTRIBUTE, "1.0.0"),
-                Collections.singletonMap(Constants.VISIBILITY_DIRECTIVE, Constants.VISIBILITY_REEXPORT));
+                Map.of(Constants.BUNDLE_VERSION_ATTRIBUTE, "1.0.0"),
+                Map.of(Constants.VISIBILITY_DIRECTIVE, Constants.VISIBILITY_REEXPORT));
 
         assertEquals("bundle1;bundle-version=\"1.0.0\";visibility:=reexport", requireBundle.write());
     }
@@ -73,8 +70,8 @@ public class MutableManifestElementTest {
     @Test
     public void testWriteNotWrappingUsesDirective() {
         MutableManifestElement exportPackage = new MutableManifestElement("com.package2",
-                Collections.singletonMap(Constants.VERSION_ATTRIBUTE, "1.1.0"),
-                Collections.singletonMap(Constants.USES_DIRECTIVE, "org.eclipse.whatever1, org.eclipse.whatever2"));
+                Map.of(Constants.VERSION_ATTRIBUTE, "1.1.0"),
+                Map.of(Constants.USES_DIRECTIVE, "org.eclipse.whatever1, org.eclipse.whatever2"));
 
         // When uses directive contains less than 3 elements it is not wrapped
         assertEquals("com.package2;version=\"1.1.0\";uses:=\"org.eclipse.whatever1,org.eclipse.whatever2\"",
@@ -84,8 +81,7 @@ public class MutableManifestElementTest {
     @Test
     public void testWriteWrappingUsesDirective() {
         MutableManifestElement exportPackage = new MutableManifestElement("com.package2",
-                Collections.singletonMap(Constants.VERSION_ATTRIBUTE, "1.1.0"),
-                Collections.singletonMap(Constants.USES_DIRECTIVE,
+                Map.of(Constants.VERSION_ATTRIBUTE, "1.1.0"), Map.of(Constants.USES_DIRECTIVE,
                         "org.eclipse.whatever1, org.eclipse.whatever2, org.eclipse.whatever3, org.eclipse.whatever4"));
 
         // When uses directive contains 3 or more elements it is wrapped
@@ -97,11 +93,10 @@ public class MutableManifestElementTest {
     @Test
     public void testWriteWrappingUsesAndXFriendsDirective() {
 
-        Map<String, String> directivesMap = new HashMap<>();
-        directivesMap.put(Constants.USES_DIRECTIVE, "org.eclipse.whatever1, org.eclipse.whatever2");
-        directivesMap.put("x-friends", "bundle.x, bundle.y");
+        Map<String, String> directivesMap = Map.of(Constants.USES_DIRECTIVE,
+                "org.eclipse.whatever1, org.eclipse.whatever2", "x-friends", "bundle.x, bundle.y");
         MutableManifestElement exportPackage = new MutableManifestElement("com.package2",
-                Collections.singletonMap(Constants.VERSION_ATTRIBUTE, "1.1.0"), directivesMap);
+                Map.of(Constants.VERSION_ATTRIBUTE, "1.1.0"), directivesMap);
 
         // When uses directive contains 3 or more elements it is wrapped
         assertEquals("com.package2;version=\"1.1.0\";\n" + "  x-friends:=\"bundle.x,\n   bundle.y\";\n"
